--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Bento</title>
-		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
-		<link rel="stylesheet" href="app.css" />
+		<link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png" />
+		<link rel="stylesheet" href="styles.min.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
-
-	<!-- 
-      ╔╗ ╔═╗╔╗╔╔╦╗╔═╗
-      ╠╩╗║╣ ║║║ ║ ║ ║
-      ╚═╝╚═╝╝╚╝ ╩ ╚═╝
-      -->
 
 	<body class="">
 		<button id="themeButton">
@@ -59,16 +53,7 @@
 		<!-- Config  -->
 		<script src="config.js"></script>
 
-		<!-- Scripts  -->
-		<script src="assets/js/layout.js"></script>
-		<script src="assets/js/theme.js"></script>
-		<script src="assets/js/time.js"></script>
-		<script src="assets/js/greeting.js"></script>
-		<script src="assets/js/weather.js"></script>
-
-		<!-- Generators  -->
-		<script src="assets/js/buttons.js"></script>
-		<script src="assets/js/lists.js"></script>
+		<script src="main.min.js"></script>
 
 		<!-- Icons -->
 		<script>
