Revert "chore(webpack): Add webpack dependencie for optimization (#5)"
This reverts commit bc2bcf8fb13251e3265be7ab1cb1c660dbc88042.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Bento</title>
-		<link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png" />
-		<link rel="stylesheet" href="styles.min.css" />
+		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
+		<link rel="stylesheet" href="app.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
+
+	<!-- 
+      ╔╗ ╔═╗╔╗╔╔╦╗╔═╗
+      ╠╩╗║╣ ║║║ ║ ║ ║
+      ╚═╝╚═╝╝╚╝ ╩ ╚═╝
+      -->
 
 	<body class="">
 		<button id="themeButton">
@@ -53,7 +59,16 @@
 		<!-- Config  -->
 		<script src="config.js"></script>
 
-		<script src="main.min.js"></script>
+		<!-- Scripts  -->
+		<script src="assets/js/layout.js"></script>
+		<script src="assets/js/theme.js"></script>
+		<script src="assets/js/time.js"></script>
+		<script src="assets/js/greeting.js"></script>
+		<script src="assets/js/weather.js"></script>
+
+		<!-- Generators  -->
+		<script src="assets/js/buttons.js"></script>
+		<script src="assets/js/lists.js"></script>
 
 		<!-- Icons -->
 		<script>
